# slide-flow

./: Cargo.toml  README-ja.md  README.md  install-binary.sh  pre-commit
docs/: 20260222-architecture.md  20260222-overview.md  20260222-usage.md  20260222-versioning-design.md  20260601-optimize-images.md  20260601-refine-path-storategy.md  20260617-modify-subcommand.md
src/: config.rs  contents.rs  images.rs  lib.rs  main.rs  parser.rs  path.rs  project.rs  slide.rs  template.rs
src/subcommand/: add.rs  bib.rs  build.rs  index.rs  init.rs  list.rs  migrate.rs  mod.rs  new.rs  pre_commit.rs  slide.rs  util.rs  version.rs
templates/: index.html  readme.md
